--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
                             <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
                             <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
                         </ul>
+                        <a href="#" class="more" title="더 보기">More<i class="fa fa-plus-circle" aria-hidden="true"></i></a>
                     </div>
 
                     <!-- //게시판 -->
