--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
     <meta name="author" content="webstoryboy">
     <meta name="description" content="반응형 사이트 따라하기">
     <meta name="keywords" content="반응형사이트, 웹퍼블리셔, 웹접근성, HTML5, webstoryboy, webs">
@@ -206,21 +207,43 @@
                     <div class="notice2 mt15">
                         <h5>Notice2</h5>
                         <ul>
-                            <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
-                            <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
-                            <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
-                            <li><a href="#">이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                            <li><a href="#">이 줄은 두 줄 효과입니다. 이 줄은 한 줄 효과입니다.이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                            <li><a href="#">이 줄은 두 줄 효과입니다. 이 줄은 한 줄 효과입니다.이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                            <li><a href="#">이 줄은 두 줄 효과입니다. 이 줄은 한 줄 효과입니다.이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
+                            <li><a href="#">이 줄은 두 줄 효과입니다. 이 줄은 한 줄 효과입니다.이 줄은 한 줄 효과입니다. 이 줄은 한 줄 효과입니다.</a></li>
                         </ul>
                         <a href="#" class="more" title="더 보기">More<i class="fa fa-plus-circle" aria-hidden="true"></i></a>
                     </div>
                     <!-- //게시판2 -->
                 </article>
                 <article class="column col3">
-                    <h4 class="col_tit">Title</h4>
-                    <p class="col_desc"> 이 곳은 설명 부분입니다. </p>
-                    <!--  -->
+                    <h4 class="col_tit">Blog</h4>
+                    <p class="col_desc">해상도에 따라 이미지를 다르게 표현하는 방법입니다.</p>
 
-                    <!-- // -->
+
+                    <!-- blog1 -->
+                    <div class="blog1">
+                        <h5 class="irsu"></h5>
+                        <figure>
+                            <image src="img/blog1_@1.jpg" class="img-normal" alt="normal image"></image>
+                            <image src="img/blog1_@2.jpg" class="img-retina" alt="retina image" width="100%"></image>
+                            <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</figcaption>
+                        </figure>
+                    </div>
+                    <!-- //blog1 -->
+
+                    <!-- blog2 -->
+                    <div class="blog2">
+                        <h5 class="irsu"></h5>
+                        <figure>
+                            <image src="img/blog2_@1.jpg" class="img-normal" alt="normal image"></image>
+                            <image src="img/blog2_@2.jpg" class="img-retina" alt="retina image" width="100%"></image>
+                            <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</figcaption>
+                        </figure>
+                    </div>
+                    <!-- //blog2 -->
+
+
                 </article>
             </section>
             <section id="cont_center">
