--- a/index.html
+++ b/index.html
@@ -221,24 +221,23 @@
                     <p class="col_desc">해상도에 따라 이미지를 다르게 표현하는 방법입니다.</p>
 
 
-                    <!-- blog1 -->
+                    <!-- blog1-->
                     <div class="blog1">
-                        <h5 class="irsu"></h5>
+                        <h5 class="ir_su">image1</h5>
                         <figure>
-                            <image src="img/blog1_@1.jpg" class="img-normal" alt="normal image"></image>
-                            <image src="img/blog1_@2.jpg" class="img-retina" alt="retina image" width="100%"></image>
-                            <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</figcaption>
+                            <img src="img/blog1_@1.jpg" class="img-normal" alt="normal image">
+                            <img src="img/blog1_@2.jpg" class="img-retina" alt="retina image" width="100%">
+                            <!--<img src="img/blog2_@1.jpg" srcset="img/blog2_@1.jpg 1x, img/blog2_@2.jpg 2x" alt="normal image"> -->
+                            <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</figcaption>
                         </figure>
                     </div>
                     <!-- //blog1 -->
-
-                    <!-- blog2 -->
+                    <!-- blog2-->
                     <div class="blog2">
-                        <h5 class="irsu"></h5>
+                        <h5 class="ir_su">image2</h5>
                         <figure>
-                            <image src="img/blog2_@1.jpg" class="img-normal" alt="normal image"></image>
-                            <image src="img/blog2_@2.jpg" class="img-retina" alt="retina image" width="100%"></image>
-                            <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</figcaption>
+                            <img src="img/blog2_@1.jpg" srcset="img/blog2_@1.jpg 1x, img/blog2_@2.jpg 2x" alt="normal image">
+                            <figcaption>반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다. 반응형 웹 사이트 이미지 글입니다.</figcaption>
                         </figure>
                     </div>
                     <!-- //blog2 -->
